src/test/deca/context/valid/SansObjet/ReadInt-floatDeclVar.deca
// Description:
//    Calling readInt() on a float declaration
// 
// Results:
//     1.0
// 
// Historique: 
//    cree le 12/01/2022 

{
    float x = readInt();
}
