src/test/deca/context/invalid/SansObjet/DeclVar-UnaryNOT-float-float.deca
// Description:
//    Declaration of a float variable using ! operation on a float variable .
// 
// Results:
//     Contextual error
//     Line 13: (RULE 3.37) Illegal operand type..
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  0.1; 
    float z = !x ; 
}
